# ccsm

./: .clang-format  .gitignore  .gitmodules  README.md  extract_desc.py  usage.md
.github/workflows/: clang-format-action.yml  clang-tidy-format-action  clang-tidy-format-action.yml
docs/: build_and_code.md  example_output.md  limits.md  metrics_details.md  usage.md
example/: README.md  example1.c  his_limits.csv
src/: CMakeLists.txt  CcsmOptionsHandler.cpp  CcsmOptionsHandler.hpp  FunctionLocator.cpp  FunctionLocator.hpp  LimitLibrary.cpp  LimitLibrary.hpp  LimitsChecker.cpp  LimitsChecker.hpp  MetricASTConsumer.cpp  MetricASTConsumer.hpp  MetricDumper.cpp  MetricDumper.hpp  MetricFrontendActors.cpp  MetricFrontendActors.hpp  MetricLinkageResolver.cpp  MetricLinkageResolver.hpp  MetricMatcher.cpp  MetricMatcher.hpp  MetricOptions.cpp  MetricOptions.hpp  MetricPPCustomer.cpp  MetricPPCustomer.hpp  MetricPPIncludeHandler.cpp  MetricPPIncludeHandler.hpp  MetricSrcExpandedLexer.cpp  MetricSrcExpandedLexer.hpp  MetricSrcLexer.cpp  MetricSrcLexer.hpp  MetricSrcUnexpandedLexer.cpp  MetricSrcUnexpandedLexer.hpp  MetricUnit.cpp  MetricUnit.hpp  MetricUtils.cpp  MetricUtils.hpp  StandardHeaders.cpp  StandardHeaders.hpp  ccsm.cpp  metrics.def
test/: Makefile  README.md  show_test_matrix.py
test/expected/: err.log.test_fn_size  err.log.test_include  err.log.test_kw_return  err.log.test_stress  err.log.test_two_include  out.log.fn_call_multiple_files  out.log.fn_call_single_file  out.log.fn_count_multiple_files  out.log.fn_count_single_file  out.log.test_comments  out.log.test_def_file  out.log.test_file_size  out.log.test_fn_call  out.log.test_fn_call_multiple_files  out.log.test_fn_call_multiple_similar_files  out.log.test_fn_call_single_file  out.log.test_fn_count_multiple_files  out.log.test_fn_count_single_file  out.log.test_fn_size  out.log.test_func_path  out.log.test_include  out.log.test_inline  out.log.test_kw_auto  out.log.test_kw_extern  out.log.test_kw_for  out.log.test_kw_goto  out.log.test_kw_if_else  out.log.test_kw_register  out.log.test_kw_return  out.log.test_linkage  out.log.test_nesting  out.log.test_oper_cast  out.log.test_oper_deref  out.log.test_oper_member_access_direct  out.log.test_oper_member_access_indirect  out.log.test_oper_reference  out.log.test_oper_sizeof  out.log.test_param  out.log.test_single_file_excluded  out.log.test_single_file_multiple  (+5 more)
test/path/: Makefile  path_test.c
test/src/: .1.c.swp  1.c  1.h  2.cpp  auto.c  comment.c  comment.h  comment2.c  comment_excluded.h  comment_free.h  comments.c  comments.h  def_file.c  def_file.def  def_file.h  def_file2.c  file_size.c  file_size.h  file_size2.c  fn_call.c  fn_call.h  fn_call2.c  fn_call2.h  fn_call_similar1.c  fn_call_similar2.c  fn_size.c  func_path.c  func_path.h  func_path2.c  inline.c  kw_auto.c  kw_extern.c  kw_extern.h  kw_for.c  kw_for.h  kw_for2.c  kw_goto.c  kw_goto.h  kw_goto2.c  kw_if_else.c  (+45 more)
test/tests/: attempt_to_analyse_directory.bats  comments.bats  comments.mk  def_file.mk  file_size.bats  fn_call_multiple_files.mk  fn_call_multiple_similar_files.mk  fn_call_single_file.mk  fn_count_multiple_files.mk  fn_count_single_file.mk  fn_size.bats  func_path.mk  include.mk  kw_auto.bats  kw_for.mk  kw_goto.mk  kw_if_else.mk  kw_return.mk  kw_typedef.bats  linkage.mk  nested_macros.bats  nesting.bats  nesting.mk  non_existent_file.bats  oper_deref.mk  oper_reference.mk  operator_count.bats  param.mk  path.bats  paths_for.bats  paths_if_condition_analysis.bats  paths_if_raw.bats  paths_mixed_condition_analysis.bats  paths_mixed_raw.bats  paths_switch.bats  paths_while_condition_analysis.bats  paths_while_raw.bats  recursive_include.mk  single_file.mk  single_file_excluded.mk  (+11 more)
utils/: extract_desc.py
utils/gen_ver/: gen_ver.py
utils/vagrant/: Vagrantfile  buildit.sh
